@@ -662,3 +662,4 @@ tryrresvport.o
 qfrontend.1
 qf-log-subject
 INPUT
+dknewkey.8
