@@ -1173,3 +1173,4 @@ hasrresvport.h
 qfrontend.1
 qf-log-subject
 INPUT
+dknewkey.8
